--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,16 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 django = "^4.1.7"
+django-storages = "^1.13.2"
+uvicorn = "^0.21.1"
+channels = "^4.0.0"
+boto3 = "^1.26.97"
+django-crispy-forms = "^2.0"
+crispy-tailwind = "^0.5.0"
 
+
+[tool.poetry.group.dev.dependencies]
+python-dotenv = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
