--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,12 @@ channels = "^4.0.0"
 boto3 = "^1.26.97"
 django-crispy-forms = "^2.0"
 crispy-tailwind = "^0.5.0"
+daphne = "^4.0.0"
+channels-redis = "^4.0.0"
+websockets = "^10.4"
+websocket-client = "^1.5.1"
+rel = "^0.4.8"
+requests = "^2.28.2"
 
 
 [tool.poetry.group.dev.dependencies]
